feat: 实现岗位管理功能，添加PostController、PostService及相关DTO和VO类，定义岗位表结构及字段配置

--- a/projector.map.json
+++ b/projector.map.json
@@ -1,20 +1,20 @@
 {
-  "ptuln": "qt_task_rcd",
+  "ptuln": "post",
   "imports": [
     "java.time.LocalDateTime"
   ],
-  "ptalcn": "qttaskrcd",
-  "ptstn": "QtTaskRcd",
-  "ptbcn": "QtTaskRcd",
-  "ptscn": "qtTaskRcd",
-  "comment": "任务调度日志表",
-  "ptaucn": "QTTASKRCD",
+  "ptalcn": "post",
+  "ptstn": "Post",
+  "ptbcn": "Post",
+  "ptscn": "post",
+  "comment": "岗位表",
+  "ptaucn": "POST",
   "fields": [
     {
       "pfscn": "id",
       "pfalcn": "id",
       "stdName": "Id",
-      "comment": "调度日志ID",
+      "comment": "岗位ID",
       "pfuln": "id",
       "pfaucn": "ID",
       "type": "Long",
@@ -25,143 +25,45 @@
       "primaryKey": true
     },
     {
-      "pfscn": "taskId",
-      "pfalcn": "taskid",
-      "stdName": "TaskId",
-      "comment": "任务ID",
-      "pfuln": "task_id",
-      "pfaucn": "TASKID",
-      "type": "Long",
-      "pfstn": "TaskId",
-      "pfbcn": "TaskId",
+      "pfscn": "name",
+      "pfalcn": "name",
+      "stdName": "Name",
+      "comment": "岗位名称",
+      "pfuln": "name",
+      "pfaucn": "NAME",
+      "type": "String",
+      "pfstn": "Name",
+      "pfbcn": "Name",
       "required": true,
       "seq": 1,
       "primaryKey": false
     },
     {
-      "pfscn": "taskName",
-      "pfalcn": "taskname",
-      "stdName": "TaskName",
-      "comment": "任务名",
-      "pfuln": "task_name",
-      "pfaucn": "TASKNAME",
+      "pfscn": "code",
+      "pfalcn": "code",
+      "stdName": "Code",
+      "comment": "岗位编码",
+      "pfuln": "code",
+      "pfaucn": "CODE",
       "type": "String",
-      "pfstn": "TaskName",
-      "pfbcn": "TaskName",
+      "pfstn": "Code",
+      "pfbcn": "Code",
       "required": true,
       "seq": 2,
       "primaryKey": false
     },
     {
-      "pfscn": "groupName",
-      "pfalcn": "groupname",
-      "stdName": "GroupName",
-      "comment": "分组名",
-      "pfuln": "group_name",
-      "pfaucn": "GROUPNAME",
-      "type": "String",
-      "pfstn": "GroupName",
-      "pfbcn": "GroupName",
-      "required": false,
+      "pfscn": "seq",
+      "pfalcn": "seq",
+      "stdName": "Seq",
+      "comment": "岗位排序",
+      "pfuln": "seq",
+      "pfaucn": "SEQ",
+      "type": "Integer",
+      "pfstn": "Seq",
+      "pfbcn": "Seq",
+      "required": true,
       "seq": 3,
-      "primaryKey": false
-    },
-    {
-      "pfscn": "target",
-      "pfalcn": "target",
-      "stdName": "Target",
-      "comment": "调用目标",
-      "pfuln": "target",
-      "pfaucn": "TARGET",
-      "type": "String",
-      "pfstn": "Target",
-      "pfbcn": "Target",
-      "required": true,
-      "seq": 4,
-      "primaryKey": false
-    },
-    {
-      "pfscn": "targetParam",
-      "pfalcn": "targetparam",
-      "stdName": "TargetParam",
-      "comment": "调用目标参数",
-      "pfuln": "target_param",
-      "pfaucn": "TARGETPARAM",
-      "type": "String",
-      "pfstn": "TargetParam",
-      "pfbcn": "TargetParam",
-      "required": false,
-      "seq": 5,
-      "primaryKey": false
-    },
-    {
-      "pfscn": "targetResult",
-      "pfalcn": "targetresult",
-      "stdName": "TargetResult",
-      "comment": "调用目标返回内容(错误时为异常堆栈)",
-      "pfuln": "target_result",
-      "pfaucn": "TARGETRESULT",
-      "type": "String",
-      "pfstn": "TargetResult",
-      "pfbcn": "TargetResult",
-      "required": false,
-      "seq": 6,
-      "primaryKey": false
-    },
-    {
-      "pfscn": "status",
-      "pfalcn": "status",
-      "stdName": "Status",
-      "comment": "运行状态 0:正常 1:失败 2:超时 3:已调度",
-      "pfuln": "status",
-      "pfaucn": "STATUS",
-      "type": "Integer",
-      "pfstn": "Status",
-      "pfbcn": "Status",
-      "required": true,
-      "seq": 7,
-      "primaryKey": false
-    },
-    {
-      "pfscn": "startTime",
-      "pfalcn": "starttime",
-      "stdName": "StartTime",
-      "comment": "运行开始时间",
-      "pfuln": "start_time",
-      "pfaucn": "STARTTIME",
-      "type": "LocalDateTime",
-      "pfstn": "StartTime",
-      "pfbcn": "StartTime",
-      "required": true,
-      "seq": 8,
-      "primaryKey": false
-    },
-    {
-      "pfscn": "endTime",
-      "pfalcn": "endtime",
-      "stdName": "EndTime",
-      "comment": "运行结束时间",
-      "pfuln": "end_time",
-      "pfaucn": "ENDTIME",
-      "type": "LocalDateTime",
-      "pfstn": "EndTime",
-      "pfbcn": "EndTime",
-      "required": false,
-      "seq": 9,
-      "primaryKey": false
-    },
-    {
-      "pfscn": "costTime",
-      "pfalcn": "costtime",
-      "stdName": "CostTime",
-      "comment": "耗时(MS)",
-      "pfuln": "cost_time",
-      "pfaucn": "COSTTIME",
-      "type": "Integer",
-      "pfstn": "CostTime",
-      "pfbcn": "CostTime",
-      "required": false,
-      "seq": 10,
       "primaryKey": false
     },
     {
@@ -175,7 +77,63 @@
       "pfstn": "CreateTime",
       "pfbcn": "CreateTime",
       "required": true,
-      "seq": 11,
+      "seq": 4,
+      "primaryKey": false
+    },
+    {
+      "pfscn": "creatorId",
+      "pfalcn": "creatorid",
+      "stdName": "CreatorId",
+      "comment": "创建人ID",
+      "pfuln": "creator_id",
+      "pfaucn": "CREATORID",
+      "type": "Long",
+      "pfstn": "CreatorId",
+      "pfbcn": "CreatorId",
+      "required": true,
+      "seq": 5,
+      "primaryKey": false
+    },
+    {
+      "pfscn": "updateTime",
+      "pfalcn": "updatetime",
+      "stdName": "UpdateTime",
+      "comment": "更新时间",
+      "pfuln": "update_time",
+      "pfaucn": "UPDATETIME",
+      "type": "LocalDateTime",
+      "pfstn": "UpdateTime",
+      "pfbcn": "UpdateTime",
+      "required": true,
+      "seq": 6,
+      "primaryKey": false
+    },
+    {
+      "pfscn": "updaterId",
+      "pfalcn": "updaterid",
+      "stdName": "UpdaterId",
+      "comment": "更新人ID",
+      "pfuln": "updater_id",
+      "pfaucn": "UPDATERID",
+      "type": "Long",
+      "pfstn": "UpdaterId",
+      "pfbcn": "UpdaterId",
+      "required": true,
+      "seq": 7,
+      "primaryKey": false
+    },
+    {
+      "pfscn": "deleteTime",
+      "pfalcn": "deletetime",
+      "stdName": "DeleteTime",
+      "comment": "删除时间 NULL未删",
+      "pfuln": "delete_time",
+      "pfaucn": "DELETETIME",
+      "type": "LocalDateTime",
+      "pfstn": "DeleteTime",
+      "pfbcn": "DeleteTime",
+      "required": false,
+      "seq": 8,
       "primaryKey": false
     }
   ],
