--- a/pdm/eas.pdma.json
+++ b/pdm/eas.pdma.json
@@ -4,7 +4,7 @@
   "avatar": "",
   "version": "4.9.4",
   "createdTime": "2025-5-31 18:54:43",
-  "updatedTime": "2026-2-14 18:18:58",
+  "updatedTime": "2026-2-14 18:49:07",
   "dbConns": [],
   "profile": {
     "default": {
@@ -24870,6 +24870,42 @@
           "extProps": {},
           "domain": "D209B1E4-22F0-448B-B944-33EC0844DDFC",
           "id": "60AA1EDA-2222-404F-B8A1-9D62656B1E7C"
+        },
+        {
+          "defKey": "status",
+          "defName": "0:启用 1:停用",
+          "comment": "",
+          "type": "",
+          "len": "",
+          "scale": "",
+          "primaryKey": false,
+          "notNull": true,
+          "autoIncrement": false,
+          "defaultValue": "",
+          "hideInGraph": false,
+          "refDict": "",
+          "baseType": "03F05E70-3F80-47EE-AA1A-9348591BD47D",
+          "extProps": {},
+          "domain": "1B3F3434-1CE8-4D13-A4C3-CDAE3CDF0498",
+          "id": "E07231F7-FE70-451A-B07E-64AF10535AB4"
+        },
+        {
+          "defKey": "remark",
+          "defName": "备注",
+          "comment": "",
+          "type": "",
+          "len": "",
+          "scale": "",
+          "primaryKey": false,
+          "notNull": false,
+          "autoIncrement": false,
+          "defaultValue": "",
+          "hideInGraph": false,
+          "refDict": "",
+          "baseType": "B283AF71-114C-45F0-AAA1-FE89710DF493",
+          "extProps": {},
+          "domain": "932160CF-A8A5-421F-833D-4375EDDF3F3C",
+          "id": "71C01BE4-A44F-4294-8A31-932314432A6F"
         },
         {
           "defKey": "create_time",
