feat: 更新 projector.map.json 和 GroupPo.java，重构数据模型以支持新的权限和字段

--- a/projector.map.json
+++ b/projector.map.json
@@ -1,70 +1,42 @@
 {
-  "ptuln": "post",
+  "ptuln": "auth_group_dept",
   "imports": [
     "java.time.LocalDateTime"
   ],
-  "ptalcn": "post",
-  "ptstn": "Post",
-  "ptbcn": "Post",
-  "ptscn": "post",
-  "comment": "岗位表",
-  "ptaucn": "POST",
+  "ptalcn": "authgroupdept",
+  "ptstn": "AuthGroupDept",
+  "ptbcn": "AuthGroupDept",
+  "ptscn": "authGroupDept",
+  "comment": "GD表",
+  "ptaucn": "AUTHGROUPDEPT",
   "fields": [
     {
-      "pfscn": "id",
-      "pfalcn": "id",
-      "stdName": "Id",
-      "comment": "岗位ID",
-      "pfuln": "id",
-      "pfaucn": "ID",
+      "pfscn": "groupId",
+      "pfalcn": "groupid",
+      "stdName": "GroupId",
+      "comment": "组ID",
+      "pfuln": "group_id",
+      "pfaucn": "GROUPID",
       "type": "Long",
-      "pfstn": "Id",
-      "pfbcn": "Id",
+      "pfstn": "GroupId",
+      "pfbcn": "GroupId",
       "required": true,
       "seq": 0,
       "primaryKey": true
     },
     {
-      "pfscn": "name",
-      "pfalcn": "name",
-      "stdName": "Name",
-      "comment": "岗位名称",
-      "pfuln": "name",
-      "pfaucn": "NAME",
-      "type": "String",
-      "pfstn": "Name",
-      "pfbcn": "Name",
+      "pfscn": "deptId",
+      "pfalcn": "deptid",
+      "stdName": "DeptId",
+      "comment": "部ID",
+      "pfuln": "dept_id",
+      "pfaucn": "DEPTID",
+      "type": "Long",
+      "pfstn": "DeptId",
+      "pfbcn": "DeptId",
       "required": true,
       "seq": 1,
-      "primaryKey": false
-    },
-    {
-      "pfscn": "code",
-      "pfalcn": "code",
-      "stdName": "Code",
-      "comment": "岗位编码",
-      "pfuln": "code",
-      "pfaucn": "CODE",
-      "type": "String",
-      "pfstn": "Code",
-      "pfbcn": "Code",
-      "required": true,
-      "seq": 2,
-      "primaryKey": false
-    },
-    {
-      "pfscn": "seq",
-      "pfalcn": "seq",
-      "stdName": "Seq",
-      "comment": "岗位排序",
-      "pfuln": "seq",
-      "pfaucn": "SEQ",
-      "type": "Integer",
-      "pfstn": "Seq",
-      "pfbcn": "Seq",
-      "required": true,
-      "seq": 3,
-      "primaryKey": false
+      "primaryKey": true
     },
     {
       "pfscn": "createTime",
@@ -77,63 +49,7 @@
       "pfstn": "CreateTime",
       "pfbcn": "CreateTime",
       "required": true,
-      "seq": 4,
-      "primaryKey": false
-    },
-    {
-      "pfscn": "creatorId",
-      "pfalcn": "creatorid",
-      "stdName": "CreatorId",
-      "comment": "创建人ID",
-      "pfuln": "creator_id",
-      "pfaucn": "CREATORID",
-      "type": "Long",
-      "pfstn": "CreatorId",
-      "pfbcn": "CreatorId",
-      "required": true,
-      "seq": 5,
-      "primaryKey": false
-    },
-    {
-      "pfscn": "updateTime",
-      "pfalcn": "updatetime",
-      "stdName": "UpdateTime",
-      "comment": "更新时间",
-      "pfuln": "update_time",
-      "pfaucn": "UPDATETIME",
-      "type": "LocalDateTime",
-      "pfstn": "UpdateTime",
-      "pfbcn": "UpdateTime",
-      "required": true,
-      "seq": 6,
-      "primaryKey": false
-    },
-    {
-      "pfscn": "updaterId",
-      "pfalcn": "updaterid",
-      "stdName": "UpdaterId",
-      "comment": "更新人ID",
-      "pfuln": "updater_id",
-      "pfaucn": "UPDATERID",
-      "type": "Long",
-      "pfstn": "UpdaterId",
-      "pfbcn": "UpdaterId",
-      "required": true,
-      "seq": 7,
-      "primaryKey": false
-    },
-    {
-      "pfscn": "deleteTime",
-      "pfalcn": "deletetime",
-      "stdName": "DeleteTime",
-      "comment": "删除时间 NULL未删",
-      "pfuln": "delete_time",
-      "pfaucn": "DELETETIME",
-      "type": "LocalDateTime",
-      "pfstn": "DeleteTime",
-      "pfbcn": "DeleteTime",
-      "required": false,
-      "seq": 8,
+      "seq": 2,
       "primaryKey": false
     }
   ],
