--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,3 @@
-
-database/.back_GlowTavern/**
-*.mv.db
-*.db
-*.mv
-userdata/**
-target/
-!.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
-.idea
-*.db
 ### IntelliJ IDEA ###
 .idea/modules.xml
 .idea/jarRepositories.xml
@@ -42,11 +30,10 @@ build/
 !.vscode/settings.json
 .vscode/*
 
-
 ### Mac OS ###
 .DS_Store
 
-# Logs
+### Logs ###
 logs
 *.log
 npm-debug.log*
@@ -55,33 +42,16 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-.DS_Store
+### Node ###
+node_modules/
+.DS_Store/
 dist
 dist-ssr
 coverage
 *.local
 
-/cypress/videos/
-/cypress/screenshots/
+### BUILD ###
+targer/
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
-
-*.tsbuildinfo
-package-lock.json
-*.exe
-*.rar
-node.exe
-MicroMarket.mv.db
-pdm/.back_EndpointAnalysisService
-
-components.d.ts
-artifact.art
+### DESIGN ###
+*.pdma.json
