--- a/.gitignore
+++ b/.gitignore
@@ -42,14 +42,6 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-### Node ###
-**/node_modules/**
-.DS_Store/
-**/dist/**
-dist-ssr
-coverage
-*.local
-
 ### BUILD ###
 targer/
 **/target/**
@@ -68,4 +60,10 @@ projector.map.json
 
 ### VIEWS ###
 **/node/**
+**/node_modules/**
+**/dist/*
 components.d.ts
+.DS_Store/
+dist-ssr
+coverage
+*.local
