--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
     <version>1.0.0</version>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.ksptooi</groupId>
-    <artifactId>endpoint-analysis-service</artifactId>
+    <groupId>com.ksptool</groupId>
+    <artifactId>bio-code</artifactId>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
