--- a/src/main/resources/web-ui/package.json
+++ b/src/main/resources/web-ui/package.json
@@ -20,6 +20,7 @@
     "bootstrap-icons": "^1.11.3",
     "cron-parser": "^5.5.0",
     "cronstrue": "^3.12.0",
+    "echarts": "^6.0.0",
     "element-plus": "2.11.3",
     "hash-wasm": "^4.12.0",
     "highlight.js": "^11.11.1",
@@ -32,6 +33,7 @@
     "vanilla-jsoneditor": "^3.8.0",
     "vue": "^3.5.13",
     "vue-demi": "^0.14.10",
+    "vue-echarts": "^8.0.1",
     "vue-json-pretty": "^2.5.0",
     "vue-router": "^4.5.0",
     "vue3-json-editor": "^1.1.5",
